Fix hero and navigation bar
Why:

* Both the hero and the navigation bar are not showing up correctly in
  mobile.

This change addresses the need by:

* Refactoring the existing hero style component to target the home page
  hero only;
* Adding a new generic hero style component to position the navbar and
  the hero content.

--- a/source/stylesheets/components/_hero.scss
+++ b/source/stylesheets/components/_hero.scss
@@ -1,56 +1,14 @@
-$Hero-top-color: rgba(#000000, 0.5);
-$Hero-bottom-color: rgba(#000000, 0.9);
+$Hero-navbar-height: 60px;
 
 .Hero {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-
-  @include mobile {
-    & > *:not(:last-child) {
-      margin-bottom: theme-spacing(large);
-    }
-  }
-
-  @include desktop {
-    flex-direction: row;
-
-    & > *:not(:last-child) {
-      margin-right: theme-spacing(huge);
-    }
-  }
 }
 
-.Hero-logo {
-  $path: image-path('logo-white.png');
-
-  @include retina($path, 2, contain, center bottom no-repeat);
-
-  width: 300px;
-  height: 100px;
-  max-width: 100%;
-
-  @include desktop {
-    background-position: right center;
-  }
+.Hero-topbar {
+  flex: 0 0 $Hero-navbar-height;
 }
 
-.Hero-separator {
-  width: 200px;
-  height: 2px;
-  max-width: 100%;
-  background: linear-gradient(to right, transparent 0%, white 25%, white 75%, transparent 100%);
-
-  @include desktop {
-    width: 2px;
-    height: 200px;
-    background: linear-gradient(to bottom, transparent 0%, white 25%, white 75%, transparent 100%);
-  }
-}
-
-.Hero-slogan {
-  max-width: 100%;
-  text-align: center;
+.Hero-content {
+  flex-grow: 1;
 }
